include/Tilengine.nim


const
  INPUT_A* = INPUT_BUTTON1
  INPUT_B* = INPUT_BUTTON2
  INPUT_C* = INPUT_BUTTON3
  INPUT_D* = INPUT_BUTTON4
  INPUT_E* = INPUT_BUTTON5
  INPUT_F* = INPUT_BUTTON6

## ! CreateWindow flags. Can be none or a combination of the following:

const
  CWF_FULLSCREEN* = (1 shl 0)     ## !< create a fullscreen window
  CWF_VSYNC* = (1 shl 1)          ## !< sync frame updates with vertical retrace
  CWF_S1* = (1 shl 2)             ## !< create a window the same size as the framebuffer
  CWF_S2* = (2 shl 2)             ## !< create a window 2x the size the framebuffer
  CWF_S3* = (3 shl 2)             ## !< create a window 3x the size the framebuffer
  CWF_S4* = (4 shl 2)             ## !< create a window 4x the size the framebuffer
  CWF_S5* = (5 shl 2)             ## !< create a window 5x the size the framebuffer
  CWF_NEAREST* = (1 shl 6)        ## <! unfiltered upscaling

## ! Error codes

type
  TLN_Error* {.size: sizeof(cint).} = enum
    TLN_ERR_OK,               ## !< No error
    TLN_ERR_OUT_OF_MEMORY,    ## !< Not enough memory
    TLN_ERR_IDX_LAYER,        ## !< Layer index out of range
    TLN_ERR_IDX_SPRITE,       ## !< Sprite index out of range
    TLN_ERR_IDX_ANIMATION,    ## !< Animation index out of range
    TLN_ERR_IDX_PICTURE,      ## !< Picture or tile index out of range
    TLN_ERR_REF_TILESET,      ## !< Invalid TLN_Tileset reference
    TLN_ERR_REF_TILEMAP,      ## !< Invalid TLN_Tilemap reference
    TLN_ERR_REF_SPRITESET,    ## !< Invalid TLN_Spriteset reference
    TLN_ERR_REF_PALETTE,      ## !< Invalid TLN_Palette reference
    TLN_ERR_REF_SEQUENCE,     ## !< Invalid TLN_Sequence reference
    TLN_ERR_REF_SEQPACK,      ## !< Invalid TLN_SequencePack reference
    TLN_ERR_REF_BITMAP,       ## !< Invalid TLN_Bitmap reference
    TLN_ERR_NULL_POINTER,     ## !< Null pointer as argument
    TLN_ERR_FILE_NOT_FOUND,   ## !< Resource file not found
    TLN_ERR_WRONG_FORMAT,     ## !< Resource file has invalid format
    TLN_ERR_WRONG_SIZE,       ## !< A width or height parameter is invalid
    TLN_ERR_UNSUPPORTED,      ## !< Unsupported function
    TLN_ERR_REF_LIST,         ## !< Invalid TLN_ObjectList reference
    TLN_MAX_ERR


## ! Debug level

type
  TLN_LogLevel* {.size: sizeof(cint).} = enum
    TLN_LOG_NONE,             ## !< Don't print anything (default)
    TLN_LOG_ERRORS,           ## !< Print only runtime errors
    TLN_LOG_VERBOSE           ## !< Print everything


## *@}

## *
##  \defgroup setup
##  \brief Basic setup and management
##  @{

proc TLN_Init*(hres: cint; vres: cint; numlayers: cint; numsprites: cint;
              numanimations: cint): TLN_Engine {.importc: "TLN_Init",
    header: "Tilengine.h".}
proc TLN_Deinit*() {.importc: "TLN_Deinit", header: "Tilengine.h".}
proc TLN_DeleteContext*(context: TLN_Engine): bool {.importc: "TLN_DeleteContext",
    header: "Tilengine.h".}
proc TLN_SetContext*(context: TLN_Engine): bool {.importc: "TLN_SetContext",
    header: "Tilengine.h".}
proc TLN_GetContext*(): TLN_Engine {.importc: "TLN_GetContext", header: "Tilengine.h".}
proc TLN_GetWidth*(): cint {.importc: "TLN_GetWidth", header: "Tilengine.h".}
proc TLN_GetHeight*(): cint {.importc: "TLN_GetHeight", header: "Tilengine.h".}
proc TLN_GetNumObjects*(): uint32_t {.importc: "TLN_GetNumObjects",
                                   header: "Tilengine.h".}
proc TLN_GetUsedMemory*(): uint32_t {.importc: "TLN_GetUsedMemory",
                                   header: "Tilengine.h".}
proc TLN_GetVersion*(): uint32_t {.importc: "TLN_GetVersion", header: "Tilengine.h".}
proc TLN_GetNumLayers*(): cint {.importc: "TLN_GetNumLayers", header: "Tilengine.h".}
proc TLN_GetNumSprites*(): cint {.importc: "TLN_GetNumSprites", header: "Tilengine.h".}
proc TLN_SetBGColor*(r: uint8_t; g: uint8_t; b: uint8_t) {.importc: "TLN_SetBGColor",
    header: "Tilengine.h".}
proc TLN_SetBGColorFromTilemap*(tilemap: TLN_Tilemap): bool {.
    importc: "TLN_SetBGColorFromTilemap", header: "Tilengine.h".}
proc TLN_DisableBGColor*() {.importc: "TLN_DisableBGColor", header: "Tilengine.h".}
proc TLN_SetBGBitmap*(bitmap: TLN_Bitmap): bool {.importc: "TLN_SetBGBitmap",
    header: "Tilengine.h".}
proc TLN_SetBGPalette*(palette: TLN_Palette): bool {.importc: "TLN_SetBGPalette",
    header: "Tilengine.h".}
proc TLN_SetRasterCallback*(a1: TLN_VideoCallback) {.
    importc: "TLN_SetRasterCallback", header: "Tilengine.h".}
proc TLN_SetFrameCallback*(a1: TLN_VideoCallback) {.
    importc: "TLN_SetFrameCallback", header: "Tilengine.h".}
proc TLN_SetRenderTarget*(data: ptr uint8_t; pitch: cint) {.
    importc: "TLN_SetRenderTarget", header: "Tilengine.h".}
proc TLN_UpdateFrame*(frame: cint) {.importc: "TLN_UpdateFrame",
                                  header: "Tilengine.h".}
proc TLN_SetLoadPath*(path: cstring) {.importc: "TLN_SetLoadPath",
                                    header: "Tilengine.h".}
proc TLN_SetCustomBlendFunction*(a1: TLN_BlendFunction) {.
    importc: "TLN_SetCustomBlendFunction", header: "Tilengine.h".}
proc TLN_SetLogLevel*(log_level: TLN_LogLevel) {.importc: "TLN_SetLogLevel",
    header: "Tilengine.h".}
proc TLN_OpenResourcePack*(filename: cstring; key: cstring): bool {.
    importc: "TLN_OpenResourcePack", header: "Tilengine.h".}
proc TLN_CloseResourcePack*() {.importc: "TLN_CloseResourcePack",
                              header: "Tilengine.h".}
## *@}
## *
##  \defgroup errors
##  \brief Basic setup and management
##  @{

proc TLN_SetLastError*(error: TLN_Error) {.importc: "TLN_SetLastError",
                                        header: "Tilengine.h".}
proc TLN_GetLastError*(): TLN_Error {.importc: "TLN_GetLastError",
                                   header: "Tilengine.h".}
proc TLN_GetErrorString*(error: TLN_Error): cstring {.importc: "TLN_GetErrorString",
    header: "Tilengine.h".}
## *@}
## *
##  \defgroup windowing
##  \brief Built-in window and input management
##  @{

proc TLN_CreateWindow*(overlay: cstring; flags: cint): bool {.
    importc: "TLN_CreateWindow", header: "Tilengine.h".}
proc TLN_CreateWindowThread*(overlay: cstring; flags: cint): bool {.
    importc: "TLN_CreateWindowThread", header: "Tilengine.h".}
proc TLN_SetWindowTitle*(title: cstring) {.importc: "TLN_SetWindowTitle",
                                        header: "Tilengine.h".}
proc TLN_ProcessWindow*(): bool {.importc: "TLN_ProcessWindow", header: "Tilengine.h".}
proc TLN_IsWindowActive*(): bool {.importc: "TLN_IsWindowActive",
                                header: "Tilengine.h".}
proc TLN_GetInput*(id: TLN_Input): bool {.importc: "TLN_GetInput",
                                      header: "Tilengine.h".}
proc TLN_EnableInput*(player: TLN_Player; enable: bool) {.importc: "TLN_EnableInput",
    header: "Tilengine.h".}
proc TLN_AssignInputJoystick*(player: TLN_Player; index: cint) {.
    importc: "TLN_AssignInputJoystick", header: "Tilengine.h".}
proc TLN_DefineInputKey*(player: TLN_Player; input: TLN_Input; keycode: uint32_t) {.
    importc: "TLN_DefineInputKey", header: "Tilengine.h".}
proc TLN_DefineInputButton*(player: TLN_Player; input: TLN_Input; joybutton: uint8_t) {.
    importc: "TLN_DefineInputButton", header: "Tilengine.h".}
proc TLN_DrawFrame*(frame: cint) {.importc: "TLN_DrawFrame", header: "Tilengine.h".}
proc TLN_WaitRedraw*() {.importc: "TLN_WaitRedraw", header: "Tilengine.h".}
proc TLN_DeleteWindow*() {.importc: "TLN_DeleteWindow", header: "Tilengine.h".}
proc TLN_EnableBlur*(mode: bool) {.importc: "TLN_EnableBlur", header: "Tilengine.h".}
proc TLN_EnableCRTEffect*(overlay: TLN_Overlay; overlay_factor: uint8_t;
                         threshold: uint8_t; v0: uint8_t; v1: uint8_t; v2: uint8_t;
                         v3: uint8_t; blur: bool; glow_factor: uint8_t) {.
    importc: "TLN_EnableCRTEffect", header: "Tilengine.h".}
proc TLN_DisableCRTEffect*() {.importc: "TLN_DisableCRTEffect",
                             header: "Tilengine.h".}
proc TLN_SetSDLCallback*(a1: TLN_SDLCallback) {.importc: "TLN_SetSDLCallback",
    header: "Tilengine.h".}
proc TLN_Delay*(msecs: uint32_t) {.importc: "TLN_Delay", header: "Tilengine.h".}
proc TLN_GetTicks*(): uint32_t {.importc: "TLN_GetTicks", header: "Tilengine.h".}
proc TLN_GetWindowWidth*(): cint {.importc: "TLN_GetWindowWidth",
                                header: "Tilengine.h".}
proc TLN_GetWindowHeight*(): cint {.importc: "TLN_GetWindowHeight",
                                 header: "Tilengine.h".}
## *@}
## *
##  \defgroup spriteset
##  \brief Spriteset resources management for sprites
##  @{

proc TLN_CreateSpriteset*(bitmap: TLN_Bitmap; data: ptr TLN_SpriteData;
                         num_entries: cint): TLN_Spriteset {.
    importc: "TLN_CreateSpriteset", header: "Tilengine.h".}
proc TLN_LoadSpriteset*(name: cstring): TLN_Spriteset {.
    importc: "TLN_LoadSpriteset", header: "Tilengine.h".}
proc TLN_CloneSpriteset*(src: TLN_Spriteset): TLN_Spriteset {.
    importc: "TLN_CloneSpriteset", header: "Tilengine.h".}
proc TLN_GetSpriteInfo*(spriteset: TLN_Spriteset; entry: cint;
                       info: ptr TLN_SpriteInfo): bool {.
    importc: "TLN_GetSpriteInfo", header: "Tilengine.h".}
proc TLN_GetSpritesetPalette*(spriteset: TLN_Spriteset): TLN_Palette {.
    importc: "TLN_GetSpritesetPalette", header: "Tilengine.h".}
proc TLN_FindSpritesetSprite*(spriteset: TLN_Spriteset; name: cstring): cint {.
    importc: "TLN_FindSpritesetSprite", header: "Tilengine.h".}
proc TLN_SetSpritesetData*(spriteset: TLN_Spriteset; entry: cint;
                          data: ptr TLN_SpriteData; pixels: pointer; pitch: cint): bool {.
    importc: "TLN_SetSpritesetData", header: "Tilengine.h".}
proc TLN_DeleteSpriteset*(Spriteset: TLN_Spriteset): bool {.
    importc: "TLN_DeleteSpriteset", header: "Tilengine.h".}
## *@}
## *
##  \defgroup tileset
##  \brief Tileset resources management for background layers
##  @{

proc TLN_CreateTileset*(numtiles: cint; width: cint; height: cint;
                       palette: TLN_Palette; sp: TLN_SequencePack;
                       attributes: ptr TLN_TileAttributes): TLN_Tileset {.
    importc: "TLN_CreateTileset", header: "Tilengine.h".}
proc TLN_CreateImageTileset*(numtiles: cint; images: ptr TLN_TileImage): TLN_Tileset {.
    importc: "TLN_CreateImageTileset", header: "Tilengine.h".}
proc TLN_LoadTileset*(filename: cstring): TLN_Tileset {.importc: "TLN_LoadTileset",
    header: "Tilengine.h".}
proc TLN_CloneTileset*(src: TLN_Tileset): TLN_Tileset {.importc: "TLN_CloneTileset",
    header: "Tilengine.h".}
proc TLN_SetTilesetPixels*(tileset: TLN_Tileset; entry: cint; srcdata: ptr uint8_t;
                          srcpitch: cint): bool {.importc: "TLN_SetTilesetPixels",
    header: "Tilengine.h".}
proc TLN_GetTileWidth*(tileset: TLN_Tileset): cint {.importc: "TLN_GetTileWidth",
    header: "Tilengine.h".}
proc TLN_GetTileHeight*(tileset: TLN_Tileset): cint {.importc: "TLN_GetTileHeight",
    header: "Tilengine.h".}
proc TLN_GetTilesetNumTiles*(tileset: TLN_Tileset): cint {.
    importc: "TLN_GetTilesetNumTiles", header: "Tilengine.h".}
proc TLN_GetTilesetPalette*(tileset: TLN_Tileset): TLN_Palette {.
    importc: "TLN_GetTilesetPalette", header: "Tilengine.h".}
proc TLN_GetTilesetSequencePack*(tileset: TLN_Tileset): TLN_SequencePack {.
    importc: "TLN_GetTilesetSequencePack", header: "Tilengine.h".}
proc TLN_DeleteTileset*(tileset: TLN_Tileset): bool {.importc: "TLN_DeleteTileset",
    header: "Tilengine.h".}
## *@}
## *
##  \defgroup tilemap
##  \brief Tilemap resources management for background layers
##  @{
